--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -117,6 +117,13 @@
     <string name="action_emoji_keyboard">Emoji keyboard</string>
     <string name="action_open_media_n">Open media #%d</string>
     <string name="action_add_tab">Add Tab</string>
+    <string name="action_links">Links</string>
+    <string name="action_mentions">Mentions</string>
+    <string name="action_hashtags">Hashtags</string>
+
+    <string name="title_hashtags_dialog">Hashtags</string>
+    <string name="title_mentions_dialog">Mentions</string>
+    <string name="title_links_dialog">Links</string>
 
     <string name="download_image">Downloading %1$s</string>
 
@@ -390,23 +397,35 @@
     <string name="max_tab_number_reached">maximum of %1$d tabs reached</string>
 
 
-    <string name="status_description_media">
+    <string name="description_status_media">
         Media: %s
     </string>
-    <string name="status_description_cw">
+    <string name="description_status_cw">
         Content warning: %s
     </string>
-    <string name="status_description_media_no_description_placeholder">
+    <string name="description_status_media_no_description_placeholder">
         No description
     </string>
-    <string name="status_description_reblogged">
+    <string name="description_status_reblogged">
         Reblogged
     </string>
-    <string name="status_description_favourited">
+    <string name="description_status_favourited">
         Favourited
     </string>
-    <string name="status_description">
-        <!-- Display name, cw?, content?, relative date, reposted by?, reposted?, favorited?, username, media?-->
-        %s; %s; %s, %s, posted %s; %s, %s, %s, %s
+    <string name="description_visiblity_public">
+        Public
+    </string>
+    <string name="description_visiblity_unlisted">
+        Unlisted
+    </string>
+    <string name="description_visiblity_private">
+        Followers
+    </string>
+    <string name="description_visiblity_direct">
+        Direct
+    </string>
+    <string name="description_status">
+        <!-- Display name, cw?, content?, relative date, reposted by?, reposted?, favorited?, username, media?; visibility-->
+        %s; %s; %s, %s, %s; %s, %s, %s, %s; %s
     </string>
 </resources>
